assets/css/style.css
/* GIVEN I need to sample a potential employee's previous work
WHEN I load their portfolio
THEN I am presented with the developer's name, a recent photo or avatar, and links to sections about them, their work, and how to contact them
WHEN I click one of the links in the navigation
THEN the UI scrolls to the corresponding section
WHEN I click on the link to the section about their work
THEN the UI scrolls to a section with titled images of the developer's applications
WHEN I am presented with the developer's first application
THEN that application's image should be larger in size than the others
WHEN I click on the images of the applications
THEN I am taken to that deployed application
WHEN I resize the page or view the site on various screens and devices
THEN I am presented with a responsive layout that adapts to my viewport */

:root {
    --seperation: 0.7em;
    --imgSize: 200px;
    --roundness: 10px;
}

body {
    font-size: 16px;
}

header {
    max-width: fit-content;
    margin: 0 auto;
}

h1 {
    max-width: fit-content;
    padding: var(--seperation);
    margin-top: var(--seperation);
    font-size: 3em;
    border: 15px solid black;
    border-style: ridge;
    border-radius: 100px;   
}

a {
    color: inherit;
    text-decoration: none;
}

.img-nav {
    display: flex;
    position: relative;
    flex-direction: row;
    align-items: center;
}

nav {
    display: flex;
    align-items: center;
    justify-content: space-around;
    border: 1px solid black;
    border-radius: var(--roundness);
    margin-top: var(--seperation);
    padding: .5em;
    height: 2em;
    width: 300px;
}

nav a {
    border: 1px solid black;
    border-radius: var(--roundness);
    width: fit-content;
    height: fit-content;
    padding: 0.25em;
    color: black;
}

.personalImg {
    height: var(--imgSize);
    width: var(--imgSize);
    border: 1px solid black;
    margin: 0 auto;
    margin-top: 1em;
}

